chore: clean up unnecessary files and fix default password logic